Fix text align problem due to removing align center everywhere

--- a/htdocs/css/app.css
+++ b/htdocs/css/app.css
@@ -11,6 +11,7 @@ body {
 }
 
 .heading {
+  text-align: center;
   margin: 20px 0 10px 0;
 }
 
