--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -8,6 +8,7 @@ html, body {
 }
 
 .heading {
+  text-align: center;
   margin: 20px 0 10px 0;
 }
 
